--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-2.0-or-later",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.1.0",
-    "googleapis": "^39.2.0",
-    "mikrotik-node": "^1.0.0",
-    "ssh2": "^0.8.9"
+    "express-handlebars": "^5.3.4",
+    "googleapis": "^88.2.0",
+    "mikrotik-node": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.13"
   }
 }
